# elprice

./: Dockerfile  run_server_and_crawler.sh  run_server_and_crawler.start
crawler/: a.out  main.c
elprice_scraper/: main.py  scraper.py  source.html
scheduler/: main.py  scheduler.py  scraper.py  server_restart.py
server/: .db.json  .db.json.backup  Cargo.toml
server/src/: db.rs  main.rs
